--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "lib": "lib"
   },
   "dependencies": {
-    "amqplib": "^0.5.2",
-    "debug": "^3.1.0"
+    "amqplib": "0.8.0",
+    "debug": "4.3.3"
   },
   "devDependencies": {
     "@log4js-node/sandboxed-module": "^2.1.1",
